<resources>
    <string name="app_name">WorldSkills Bank</string>
    <string name="bankomat_time">Часы работы: %1$s-%2$s</string>
    <string name="bankomats_title">Отделения и банкоматы</string>
    <string name="valutes_title">Курсы валют</string>
    <string name="val_title">Курс</string>
    <string name="not_found">Не найдено</string>
    <string name="login_title">Войти</string>
    <string name="auth_title">Авторизация</string>
    <string name="login_desc">Введите логин и пароль:</string>
    <string name="uname">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="login_log">Войти</string>
    <string name="login_cancel">Отмена</string>
    <string name="bottom_nav_home">Главная</string>
    <string name="bottom_nav_payments">Платежи</string>
    <string name="bottom_nav_history">История</string>
    <string name="bottom_nav_dialogs">Диалоги</string>
    <string name="cards_title">МОИ КАРТЫ</string>
    <string name="checks_title">МОИ СЧЕТА</string>
    <string name="credits_title">МОИ КРЕДИТЫ</string>
    <string name="home_sum">%1$.2f руб.</string>
    <string name="home_sum_to">+%1$.2f руб.</string>
    <string name="home_sum_from">-%1$.2f руб.</string>
    <string name="home_sum_none"> </string>
    <string-array name="options_list">
        <item>Изменение пароля</item>
        <item>Изменение логина</item>
        <item>История посещений</item>
        <item>Информация о приложении</item>
        <item>Выход</item>
    </string-array>
    <string name="username_edit_title">Изменение логина</string>
    <string name="username_edit_desc">Введите новый логин:</string>
    <string name="password_edit_title">Изменение пароля</string>
    <string name="password_edit_desc">Введите новый пароль:</string>
    <string name="edit_button">Изменить</string>
    <string name="username_changed">Имя пользователя изменено</string>
    <string name="password_changed">Пароль изменен</string>
    <string name="short_password">Пароль слишком короткий!</string>
    <string name="information_title">Мобильное приложение WorldSkills Online</string>
    <string name="information_version">Версия 1.0.0</string>
    <string name="information_link">
        <a href="https://www.avangard.ru/rus/docs/rules_cart_use_in_system_mobile_pays.pdf">Пользовательское соглашение</a>
    </string>
    <string name="information_dev">Разработано: Гончаров Константин Дмитриевич</string>
    <string name="card_info_deposit">Пополнить</string>
    <string name="card_info_transfer">Перевести</string>
    <string-array name="card_info_options">
        <item>История операций</item>
        <item>Заблокировать</item>
        <item>Переименовать</item>
    </string-array>
    <string name="card_block_title">Карта заблокирована!</string>
    <string name="card_block_dialog_title">Блокировка карты</string>
    <string name="card_block_dialog_desc">Подтвердите блокировку карты:</string>
    <string name="card_block_pos_btn">Заблокировать</string>
    <string name="wrong_password">Неверный пароль!</string>
    <string name="history_card_title_to">Перевод на карту</string>
    <string name="history_card_title_from">Перевод с карты</string>
    <string name="history_check_title_to">Перевод на счет</string>
    <string name="history_check_title_from">Перевод со счета</string>
    <string name="general_history_title">Перевод с %1$s на %2$s</string>
    <string name="loading_title">Загрузка…</string>
    <string name="card_rename_title">Переименование карты</string>
    <string name="check_rename_title">Переименование счета</string>
    <string name="rename_desc">Введите новое имя</string>
    <string name="card_rename_hint">Имя карты</string>
    <string name="check_rename_hint">Имя счета</string>
    <string name="rename_pos_btn">Изменить</string>
    <string name="card_rename_success">Карта переименована</string>
    <string name="check_rename_success">Счет переименован</string>
    <string name="card_rename_short_name">Имя не может быть пустым!</string>
    <string-array name="check_info_options">
        <item>История операций</item>
        <item>Переименовать</item>
    </string-array>
    <string name="dep_switch_card">С карты</string>
    <string name="dep_switch_check">Со счета</string>
    <string name="dep_sum_hint">Введите сумму</string>
    <string name="dep_btn_title">Перевести</string>
    <string name="card_source_title">Карта отправителя</string>
    <string name="card_dest_title">Карта получателя</string>
    <string name="check_source_title">Счет отправителя</string>
    <string name="transaction_accept_title">Подтверждение перевода</string>
    <string name="transaction_accept_desc">Подтвердите перевод вводом пароля:</string>
    <string name="transaction_accept_btn">Перевести</string>
    <string name="transaction_wrong_sum">Неверно введена сумма!</string>
    <string name="transaction_success">Перевод завершен!</string>
    <string name="ok">OK</string>
    <string name="logout">Выйти</string>
    <string name="logout_title">Выйти из учетной записи?</string>
    <string name="transfer_list_title">Выберите карту получателя</string>
    <string name="custom_card_title">Карта любого банка</string>
    <string name="custom_card_number_hint">Введите номер карты</string>
    <string name="next">Далее</string>
    <string name="not_enough_money">Недостаточно денег!</string>
    <string name="card_num_incorrect">Некорректный номер карты!</string>
    <string-array name="payments_list">
        <item>Сотовая связь</item>
        <item>Квартплата</item>
        <item>Интернет</item>
        <item>Штрафы</item>
        <item>Страхование</item>
    </string-array>
    <string name="payment_accept_number">Введите номер договора</string>
    <string name="payment_accept_card">Выберите карту</string>
    <string name="payment_accept_sum">Введите сумму</string>
    <string name="payment_accept_number_hint">Номер договора</string>
    <string name="payment_accept_sum_hint">Сумма</string>
    <string name="payment_accept_btn">Оплатить</string>
    <string name="payment_templates"><u>Смотреть все шаблоны</u></string>
    <string name="template_delete">Удалить</string>
    <string name="template_edit">Изменить</string>
    <string name="template_phone">Шаблон сотовой связи</string>
    <string name="template_internet">Шаблон интернета</string>
    <string name="template_apart">Шаблон квартплаты</string>
    <string name="gps_disabled_title">Сервисы отключены</string>
    <string name="gps_disabled_desc">Приложение не может получить доступ к вашему местоположению.
        Пожалуйста, включите сеть и GPS, а также предоставьте приложению необходимые разрешения.
    </string>
    <string name="error">Ошибка!</string>
</resources>