<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/bottom_nav_home"
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/baseline_home_24" />
    <item
        android:title="@string/bottom_nav_payments"
        android:id="@+id/bottom_nav_payments"
        android:icon="@drawable/baseline_payments_24" />
    <item
        android:title="@string/bottom_nav_history"
        android:id="@+id/bottom_nav_history"
        android:icon="@drawable/baseline_history_24"/>
    <item
        android:title="@string/bottom_nav_dialogs"
        android:id="@+id/bottom_nav_dialogs"
        android:icon="@drawable/baseline_message_24" />
</menu>