<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragments.InformationFragment">

    <TextView
        android:id="@+id/info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/information_title"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/info_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/information_version"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/info_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/information_link"
        android:textColorLink="#651FFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/info_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/information_dev"
        android:textColor="#000000"
        android:textSize="16sp" />
</LinearLayout>