<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:overScrollMode="never"
    tools:context=".fragments.TransferListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/transfer_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/transfer_list_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingTop="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:background="@drawable/main_btn_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/custom_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_card_title"
                android:textColor="#40559A"/>

            <EditText
                android:id="@+id/custom_card_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/custom_card_number_hint"/>

            <Button
                android:id="@+id/custom_card_next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_gravity="end"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_transfer_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>