<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CardInfoFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/purple_200">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="20dp"
            android:background="@drawable/main_btn_bg"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/card_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#40559A" />

            <TextView
                android:id="@+id/card_info_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="TextView"
                android:textColor="#40559A" />

            <TextView
                android:id="@+id/card_info_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/card_block_title"
                android:textColor="#FF0000"
                android:textSize="24sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/card_info_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="TextView"
                android:textColor="#40559A" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/deposit_btn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:backgroundTint="#FF5252"
                android:text="@string/card_info_deposit" />

            <Button
                android:id="@+id/transfer_btn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#46DC92"
                android:text="@string/card_info_transfer" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/card_info_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:entries="@array/card_info_options" />
</LinearLayout>